2011-02-18  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, rolling out r78982.
        http://trac.webkit.org/changeset/78982

        * platform/gtk/accessibility/combo-box-collapsed-selection-changed-expected.txt:

2011-02-18  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, update platform/gtk/accessibility test baselines as
        requested by Mario Sanchez Prada.

        * platform/gtk/accessibility/combo-box-collapsed-selection-changed-expected.txt:

2011-02-17  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        IndexedDB: Populate indexes created for object stores with data
        https://bugs.webkit.org/show_bug.cgi?id=54669

        Test that creating an index for an object store that already holds
        data works.

        * storage/indexeddb/index-basics-expected.txt:
        * storage/indexeddb/index-basics.html:

2011-02-18  Mario Sanchez Prada  <msanchez@igalia.com>

        [GTK] Combo boxes should emit object:selection-changed even when collapsed
        https://bugs.webkit.org/show_bug.cgi?id=53146

        New GTK-specific layout test to check the right signals are emitted.

        * platform/gtk/accessibility/combo-box-collapsed-selection-changed-expected.txt: Added.
        * platform/gtk/accessibility/combo-box-collapsed-selection-changed.html: Added.

2011-02-18  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, update GTK tables/mozilla_expected_failures baselines

        * platform/gtk/tables/mozilla_expected_failures/bugs/bug10140-expected.txt:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug10216-expected.txt:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug104898-expected.txt:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug1055-2-expected.txt:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug106966-expected.txt:
        * platform/gtk/tables/mozilla_expected_failures/bugs/bug1128-expected.txt: