@@ -42,30 +42,6 @@ void AXObjectCache::attachWrapper(AccessibilityObject* obj)
     g_object_unref(atkObj);
 }
 
-static AccessibilityObject* getListObject(AccessibilityObject* object)
-{
-    // Only list boxes and menu lists supported so far.
-    if (!object->isListBox() && !object->isMenuList())
-        return 0;
-
-    // For list boxes the list object is just itself.
-    if (object->isListBox())
-        return object;
-
-    // For menu lists we need to return the first accessible child,
-    // with role MenuListPopupRole, since that's the one holding the list
-    // of items with role MenuListOptionRole.
-    AccessibilityObject::AccessibilityChildrenVector children = object->children();
-    if (!children.size())
-        return 0;
-
-    AccessibilityObject* listObject = children.at(0).get();
-    if (!listObject->isMenuListPopup())
-        return 0;
-
-    return listObject;
-}
-
 static void notifyChildrenSelectionChange(AccessibilityObject* object)
 {
     // This static variable is needed to keep track of the old focused
@@ -73,24 +49,19 @@ static void notifyChildrenSelectionChange(AccessibilityObject* object)
     // properly decide whether to emit some signals or not.
     static RefPtr<AccessibilityObject> oldFocusedObject = 0;
 
-    // Only list boxes and menu lists supported so far.
-    if (!object || !(object->isListBox() || object->isMenuList()))
+    // Only list boxes supported so far.
+    if (!object || !object->isListBox())
         return;
 
     // Emit signal from the listbox's point of view first.
     g_signal_emit_by_name(object->wrapper(), "selection-changed");
 
     // Find the item where the selection change was triggered from.
+    AccessibilityObject::AccessibilityChildrenVector items = object->children();
     SelectElement* select = toSelectElement(static_cast<Element*>(object->node()));
     if (!select)
         return;
     int changedItemIndex = select->activeSelectionStartListIndex();
-
-    AccessibilityObject* listObject = getListObject(object);
-    if (!listObject)
-        return;
-
-    AccessibilityObject::AccessibilityChildrenVector items = listObject->children();
     if (changedItemIndex < 0 || changedItemIndex >= static_cast<int>(items.size()))
         return;
     AccessibilityObject* item = items.at(changedItemIndex).get();
@@ -132,13 +103,13 @@ void AXObjectCache::postPlatformNotification(AccessibilityObject* coreObject, AX
         if (!coreObject->isCheckboxOrRadio())
             return;
         g_signal_emit_by_name(axObject, "state-change", "checked", coreObject->isChecked());
-    } else if (notification == AXSelectedChildrenChanged || notification == AXMenuListValueChanged) {
-        if (notification == AXMenuListValueChanged && coreObject->isMenuList()) {
-            g_signal_emit_by_name(axObject, "focus-event", true);
-            g_signal_emit_by_name(axObject, "state-change", "focused", true);
-        }
+    } else if (notification == AXMenuListValueChanged) {
+        if (!coreObject->isMenuList())
+            return;
+        g_signal_emit_by_name(axObject, "focus-event", true);
+        g_signal_emit_by_name(axObject, "state-change", "focused", true);
+    } else if (notification == AXSelectedChildrenChanged)
         notifyChildrenSelectionChange(coreObject);
-    }
 }
 
 static void emitTextChanged(AccessibilityRenderObject* object, AXObjectCache::AXTextChange textChange, unsigned offset, unsigned count)
