@@ -1,5 +1,17 @@
 2011-02-18  Philippe Normand  <pnormand@igalia.com>
 
+        Unreviewed, rolling out r78979.
+        http://trac.webkit.org/changeset/78979
+        https://bugs.webkit.org/show_bug.cgi?id=53146
+
+        causes multiple crashes on GTK
+
+        * accessibility/gtk/AXObjectCacheAtk.cpp:
+        (WebCore::notifyChildrenSelectionChange):
+        (WebCore::AXObjectCache::postPlatformNotification):
+
+2011-02-18  Philippe Normand  <pnormand@igalia.com>
+
         Reviewed by Martin Robinson.
 
         [GTK] minimal build unrecognized options
